--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/Chronomly6/Soundhax#readme",
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "common-tags": "^1.4.0",
+    "discord.js": "^11.2.1",
+    "ms": "^2.0.0",
     "opusscript": "0.0.3",
-    "ytdl-core": "^0.15.0"
+    "ytdl-core": "^0.15.2"
   }
 }
